--- a/Writer - Prompt Improver/.gitignore
+++ b/Writer - Prompt Improver/.gitignore
@@ -1,6 +1,5 @@
 # Git Ignore Configuration
 # Specifies intentionally untracked files that Git should ignore
-
 Context/
 Export/
-/.vscode/
+.vscode/
